--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-openai-agents
-tenacity
-aiohttp>=3.8.0
-pydantic>=2.0.0
-pytest-asyncio>=1.0.0
+openai-agents==0.6.9
+tenacity==9.1.2
+aiohttp==3.13.3
+pydantic==2.12.5
+pytest-asyncio==1.3.0
