Add Protocol Viewer service with web UI
- Add FastAPI backend with REST API for protocol data
- Add Vue.js frontend with graph visualization, timeline, and detail panel
- Add .gitignore patterns for protocol files (.db, .jsonl, etc.)
- Update requirements.txt with FastAPI and uvicorn dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,33 @@ ya.make
 
 logs
 libpy3ai-agents-reagentic.global.a
+
+# Protocol files
+*.db
+*.db-shm
+*.db-wal
+*.jsonl
+protocol.db
+protocol.jsonl
+
+# Node.js / Frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Frontend build artifacts
+reagentic/utilities/protocol_viewer/frontend/dist/
+reagentic/utilities/protocol_viewer/frontend/.vite/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
