--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ tenacity==9.1.2
 aiohttp==3.13.3
 pydantic==2.12.5
 pytest-asyncio==1.3.0
+
+# Protocol Viewer dependencies
+fastapi>=0.115.0
+uvicorn>=0.34.0
